--- a/package.json
+++ b/package.json
@@ -6,6 +6,17 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react-native": "^0.18.1"
+    "lodash": "^4.0.1",
+    "moment": "^2.11.1",
+    "normalizr": "^2.0.0",
+    "react": "^0.14.6",
+    "react-native": "^0.18.1",
+    "react-native-player": "0.0.9",
+    "react-native-vector-icons": "^1.1.0",
+    "react-pure-render": "^1.0.2",
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.6",
+    "redux-logger": "^2.4.0",
+    "redux-thunk": "^1.0.3"
   }
 }
